fixed desktop sidebar overlapping nav, shrunk mobile footer icons, adjusted mobile serachbar

--- a/VRhfo.UI/wwwroot/css/site.css
+++ b/VRhfo.UI/wwwroot/css/site.css
@@ -204,7 +204,6 @@ body {
          margin-right: -10px;
     }
     .pagination a{
-        padding: 10px !important;
         margin: 0 !important;
         max-width: 80vw;
     }
